Fixed home styling on mobile

--- a/static/css/application.css
+++ b/static/css/application.css
@@ -91,14 +91,7 @@ body {
 .footer-links .logo {
   float: left;
   font-size: 32px;
-
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: flex;
-  align-self: center;
+  margin-top: 8px;
 }
 
 .footer-links .other-links {
