--- a/static/css/index.css
+++ b/static/css/index.css
@@ -55,7 +55,6 @@
 }
 
 .about-panels {
-  height: 400px;
   margin-top: 50px;
   margin-bottom: 50px;
 }
